[gd_scene load_steps=4 format=3 uid="uid://ctro1f1qm7y5l"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_b48m7"]

[sub_resource type="LabelSettings" id="LabelSettings_b8j7o"]
font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpjr1"]
bg_color = Color(0.752941, 0.568627, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_b48m7")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 54
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/GameOverBox"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_b8j7o")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tpjr1")

[node name="Button" type="Button" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -15.5
offset_right = 32.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Restart"

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/Button" to="." method="_on_button_pressed"]
